# nostr-telegram

./: .gitignore  Dockerfile  LICENSE  README.md  README.md.txt  blockstream.py  coingecko_ticker.py  config_sample.yml  constants.py  dbtools.py  fly.toml  nostrtest.py  pyproject.toml  requirements.txt  testnostr.py  tgbot.py
archive/: nostrconn.py  testnostr.py
